# aoer-plotty-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
examples/: bitmap_pointfield_voronoi.rs  carlson_smith_fibo_nannou.rs  carlson_smith_gallery_nannou.rs  carlson_smith_nannou.rs  context_basic.rs  contour.rs  contour_gallery.rs  ga_01_tiled_lines.rs  ga_02_joy_division.rs  ga_03_cubic_disarray.rs  ga_04_triangular_mesh.rs  ga_05_undeuxtrois.rs  ga_06_circle_packing.rs  ga_07_hypnotic_squares.rs  ga_08_piet_mondrian.rs  ga_09_hours_of_dark.rs  gosper_lsys_turtle_nannou.rs  gosper_svg.rs  hatch_gallery.rs  hobby_curve.rs  point_fields.rs  typography.rs  voronoi.rs
src/: errors.rs  lib.rs
src/context/: glyph_proxy.rs  line_filter.rs  mod.rs  operation.rs  pgf_file.rs  typography.rs
src/elements/: carlson_smith.rs  contours.rs  mod.rs  point_field.rs  voronoi.rs
src/elements/point_field/: bitmap.rs  halton.rs  mod.rs  perlin.rs
src/gcode/: mod.rs
src/geo_types/: boolean.rs  buffer.rs  clip.rs  flatten.rs  hatch.rs  hilbert_spatial_hash.rs  matrix.rs  mod.rs  nannou.rs  shapes.rs  spline.rs  svg.rs
src/geo_types/hatch/: circles.rs  crosshatch.rs  fasthex.rs  gototen.rs  line.rs  mod.rs  radius.rs  spiral.rs  truchet.rs
src/l_system/: mod.rs
src/optimizer/: mod.rs
src/plotter/: error.rs  mod.rs  pen.rs
src/turtle/: mod.rs
src/util/: halton.rs  mod.rs
