[package]
name = "aoer-plotty-rs"
description = "A variety of utilities for creating pen-plotter based artwork."
version = "0.1.6"
edition = "2021"
license = "MIT"
homepage = "https://github.com/armyofevilrobots/aoer-plotty-rs"
repository = "https://github.com/armyofevilrobots/aoer-plotty-rs"

[dependencies]
anyhow = "1.0"
geo-types = "0.7"
geo = "0.20"
geos = {version = "8.1", features = ["geo", "json"]}
geo-offset = "0.3"
geo-clipper = "0.7"
num-traits = "0.2"
nannou = "0.18"
num = "0.4"
embed-doc-image = "0.1"
tera = "1"
svg = "0.10"
nalgebra = "0.31"
wkt = "0.10"
rand = "0.8.5"
splines = "4.1"
cubic_spline = "1.0"