[package]
name = "aoer-plotty-rs"
description = "A variety of utilities for creating pen-plotter based artwork."
version = "0.2.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/armyofevilrobots/aoer-plotty-rs"
repository = "https://github.com/armyofevilrobots/aoer-plotty-rs"

[dependencies]
anyhow = "1.0"
font = "0.4"
serialport = "4.0.1"
geo-types = { version="0.7", features= ["serde"]}
geo = "0.20"
geos = { version = "8.1", features = ["geo", "json"] }
geo-offset = "0.3"
geo-clipper = "0.7"
num-traits = "0.2"
nannou = "0.18"
nannou_egui = "0.5"
num = "0.4"
embed-doc-image = "0.1"
tera = "1"
svg = "0.18.0"
nalgebra = "0.31"
wkt = "0.10"
rand = "0.8"
splines = "4.1"
kurbo = "0.8"
cubic_spline = "1.0"
font-kit = "0.11"
pathfinder_geometry = "0.5"
threadpool = "1.0"
crossbeam = "0.8.2"
rayon = "1.5.3"
skip_error = "3.1.1"
rstar = "0.9.3"
url = "2.2.2"
serde = { version = "1.0.210", features = ["derive"] }
#itertools = "0.10"
