[package]
name = "aoer-plotty-rs"
description = "A variety of utilities for creating pen-plotter based artwork."
version = "0.4.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/armyofevilrobots/aoer-plotty-rs"
repository = "https://github.com/armyofevilrobots/aoer-plotty-rs"
readme = "README.md"


[features]
nannou=["dep:nannou", "dep:nannou_egui"]

[dependencies]
anyhow = "1.0"
font = "0.4"
csscolorparser = { version = "0.7.2", features = ["serde", "rgb", "lab", "cint"] }
voronoice="0.2.0"
serialport = "4.0.1"
geo-types = { version = "0.7", features = ["serde"] }
geo = "0.30"
geos = { version = "8.1", features = ["geo", "json"] }
geo-offset = "0.4"
geo-clipper = "0.7"
num-traits = "0.2"
nannou = {version="0.19", optional=true}
nannou_egui = {version="0.19", optional=true}
noise="0.7"
num = "0.4"
embed-doc-image = "0.1"
tera = "1"
svg = "0.18.0"
nalgebra = "0.34"
wkt = "0.10"
rand = {version="0.8", features=["small_rng"]}
splines = "4.1"
kurbo = "0.8"
cubic_spline = "1.0"
font-kit = "0.11"
pathfinder_geometry = "0.5"
threadpool = "1.0"
crossbeam = "0.8.2"
rayon = "1.5.3"
skip_error = "3.1.1"
rstar = "0.9.3"
url = "2.2.2"
serde = { version = "1.0.210", features = ["derive"] }
contour = "0.13.1"
image = "0.25.8"
fast_hilbert = "2.0.1"
ron = "0.11.0"
postcard = "1.1.3"
#itertools = "0.10"
